--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 			<button id="button-reset" disabled>重置</button>
 		</div>
 		<div class="gamepad">
-			<div class="box" data-serial="1-1"></div>
-			<div class="box" data-serial="1-2"></div>
-			<div class="box" data-serial="1-3"></div>
-			<div class="box" data-serial="2-1"></div>
-			<div class="box" data-serial="2-2"></div>
-			<div class="box" data-serial="2-3"></div>
-			<div class="box" data-serial="3-1"></div>
-			<div class="box" data-serial="3-2"></div>
-			<div class="box" data-serial="3-3"></div>
+			<div class="box" data-serial="1-1" data-player=""></div>
+			<div class="box" data-serial="1-2" data-player=""></div>
+			<div class="box" data-serial="1-3" data-player=""></div>
+			<div class="box" data-serial="2-1" data-player=""></div>
+			<div class="box" data-serial="2-2" data-player=""></div>
+			<div class="box" data-serial="2-3" data-player=""></div>
+			<div class="box" data-serial="3-1" data-player=""></div>
+			<div class="box" data-serial="3-2" data-player=""></div>
+			<div class="box" data-serial="3-3" data-player=""></div>
 		</div>
 		<div class="informations">
 			目前玩家:
@@ -31,11 +31,11 @@
 			<div class="time-display">
 				<div id="circle-timer">
 					O: 
-					<span class="timer">60.0</span>
+					<span class="timer"></span>
 				</div>
 				<div id="cross-timer">
 					X: 
-					<span class="timer">60.0</span>
+					<span class="timer"></span>
 				</div>
 			</div>
 		</div>
