--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 			<button id="button-reset" disabled>重置</button>
 		</div>
 		<div class="gamepad">
-			<div class="box" data-serial="1-1" data-player=""></div>
-			<div class="box" data-serial="1-2" data-player=""></div>
-			<div class="box" data-serial="1-3" data-player=""></div>
-			<div class="box" data-serial="2-1" data-player=""></div>
-			<div class="box" data-serial="2-2" data-player=""></div>
-			<div class="box" data-serial="2-3" data-player=""></div>
-			<div class="box" data-serial="3-1" data-player=""></div>
-			<div class="box" data-serial="3-2" data-player=""></div>
-			<div class="box" data-serial="3-3" data-player=""></div>
+			<div class="box" data-player=""></div>
+			<div class="box" data-player=""></div>
+			<div class="box" data-player=""></div>
+			<div class="box" data-player=""></div>
+			<div class="box" data-player=""></div>
+			<div class="box" data-player=""></div>
+			<div class="box" data-player=""></div>
+			<div class="box" data-player=""></div>
+			<div class="box" data-player=""></div>
 		</div>
 		<div class="informations">
 			目前玩家:
