--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="master.css">
+	<link rel="icon" type="image/x-icon" href="./tic_tac_toe.png">
 	<script src="main.js"></script>
-	<title>Document</title>
+	<title>井字遊戲</title>
 </head>
 <body>
 	<div id="app">
