[FIX] Simplify Code Structure and remove useless part of timer setting region

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <button id="button-start">開始</button>
       <button id="button-reset" disabled>重置</button>
     </div>
-    <div class="gamepad">
+    <div id="gamepad">
     </div>
     <div class="informations">
       目前玩家:
-      <span class="current-player"></span>
+      <span id="current-player"></span>
       <div class="time-display">
         <div id="circle-timer">
           O: 
