[FIX] Hover value display still work when game is not starting

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <button id="button-start">開始</button>
       <button id="button-reset" disabled>重置</button>
     </div>
-    <div id="gamepad">
+    <div id="gamepad" class="deactivated">
     </div>
     <div class="informations">
       目前玩家:
