[NEW] Game Init

--- a/index.html
+++ b/index.html
@@ -14,17 +14,7 @@
     <button>開始</button>
     <button class="ml-1" disabled>重置</button>
   </div>
-  <div id="gamepad" class="d-grid grid-row-3 grid-col-3 gridline--black mt-2">
-    <div class="bg--white d-flex justify-center items-center"></div>
-    <div class="bg--white d-flex justify-center items-center"></div>
-    <div class="bg--white d-flex justify-center items-center"></div>
-    <div class="bg--white d-flex justify-center items-center"></div>
-    <div class="bg--white d-flex justify-center items-center"></div>
-    <div class="bg--white d-flex justify-center items-center"></div>
-    <div class="bg--white d-flex justify-center items-center"></div>
-    <div class="bg--white d-flex justify-center items-center"></div>
-    <div class="bg--white d-flex justify-center items-center"></div>
-  </div>
+  <div id="gamepad" class="d-grid grid-row-3 grid-col-3 gridline--black mt-2"></div>
   <div id="info" class="d-flex flex-col mt-2">
     <div id="current" class="title">
       目前玩家:
