[NEW] Add Lodash and change some methods

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="master.css" />
-    <script src="dist/main.js"></script>
+    <script type="module" src="dist/main.js"></script>
     <title>井字遊戲</title>
   </head>
   <body>
