[NEW] Adding RxJS, changing user event, renderer and timer to stream-based

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       id="gamepad"
       class="d-grid grid-row-3 grid-col-3 gridline--black mt-2"
     ></div>
-    <div id="info" class="d-flex flex-col mt-2">
+    <div class="d-flex flex-col mt-2">
       <div id="current" class="title">目前玩家:</div>
       <div id="timer" class="d-flex flex-col mt-2">
         <div>
